[package]
name = "bevy_anyhow_alert"
version = "0.1.0"
authors = ["Sean Sullivan <me@snen.dev>"]
description = "Easy system error handling with Bevy; let your systems return `Result`!"
repository = "https://github.com/snendev-labs/bevy_anyhow_alert"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "errors", "gamedev", "game", "result"]
readme = "README.md"
edition = "2021"

[dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "bevy_ui",
    "bevy_text",
    "default_font",
] }
anyhow = "1.0"
bevy_mod_try_system = { version = "0.1" }
bevy_ui_mod_alerts = { version = "0.1" }

[dev-dependencies]
thiserror = "1.0"

[[example]]
name = "toasts"
path = "examples/toasts.rs"
required-features = ["bevy/bevy_winit", "bevy/x11"]
