[package]
name = "bevy_anyhow_alert"
version = "0.3.0"
authors = ["Sean Sullivan <me@snen.dev>"]
description = "Easy system error handling with Bevy; let your systems return `Result`!"
repository = "https://github.com/snendev-labs/bevy_anyhow_alert"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "errors", "gamedev", "game", "result"]
readme = "README.md"
edition = "2021"

[dependencies]
bevy_ecs = { version = "0.14", default-features = false }
anyhow = "1.0"
bevy_ui_mod_alerts = { version = "0.2" }

[dev-dependencies]
bevy = { version = "0.14", default-features = false }
thiserror = "1.0"

[[example]]
name = "toasts"
path = "examples/toasts.rs"
required-features = ["bevy/bevy_winit", "bevy/x11"]
